tests/pos/i18261/Foo_0.scala
type Foo[T] = T match
  case Any => T
