tests/neg/i18448/UBMatch_1.scala
type <:![T <: UB, UB] <: UB = T match
  case UB => T
